--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  SPb GBUK "CBS Kurortnogo rayona" built the Bibliobus app as
-                  a Free app. This SERVICE is provided by
-                  SPb GBUK "CBS Kurortnogo rayona" at no cost and is intended for use as
-                  is.
+                СПб ГБУК «ЦБС Курортного района» разработала приложение «Библиобус» как
+                   Бесплатное приложение. Данный СЕРВИС предоставляется
+                   СПб ГБУК «ЦБС Курортного района» безвозмездно и предназначен для использования как есть.
                 </p> <p>
-                  This page is used to inform visitors regarding our
-                  policies with the collection, use, and disclosure of Personal
-                  Information if anyone decided to use our Service.
+                 Эта страница используется для информирования посетителей о наших правилах сбора, использования и раскрытия Личной информации, если кто-либо решил воспользоваться нашим Сервисом.
                 </p> <p>
                   If you choose to use our Service, then you agree to
                   the collection and use of information in relation to this
