--- a/index.html
+++ b/index.html
@@ -14,35 +14,17 @@
                 </p> <p>
                  Эта страница используется для информирования посетителей о наших правилах сбора, использования и раскрытия Личной информации, если кто-либо решил воспользоваться нашим Сервисом.
                 </p> <p>
-                  If you choose to use our Service, then you agree to
-                  the collection and use of information in relation to this
-                  policy. The Personal Information that we collect is
-                  used for providing and improving the Service. We will not use or share your information with
-                  anyone except as described in this Privacy Policy.
+                  Если вы используете наш Сервис, вы соглашаетесь на сбор и использование информации в связи с этой политикой. Личная информация, которую мы собираем, используется для предоставления и улучшения Сервиса. Мы не будем использовать или передавать вашу информацию кому-либо, кроме случаев, описанных в настоящей Политике конфиденциальности.
                 </p> <p>
-                  The terms used in this Privacy Policy have the same meanings
-                  as in our Terms and Conditions, which are accessible at
-                  Bibliobus unless otherwise defined in this Privacy Policy.
+                  Условия, описанные в настоящей Политике конфиденциальности, имеют те же значения, что и в наших Условиях и положениях, которые доступны в приложении, если иное не определено в настоящей Политикой конфиденциальности.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
-                  For a better experience, while using our Service, we
-                  may require you to provide us with certain personally
-                  identifiable information. The information that
-                  we request will be retained by us and used as described in this privacy policy.
+                  Для лучшего опыта при использовании нашего Сервиса мы можем потребовать, чтобы вы предоставили нам определенную личную информацию. Информация, которую мы запрашиваем, будет сохранена нами и использована, как описано в настоящей политике конфиденциальности.
                 </p> <!----> <p><strong>Log Data</strong></p> <p>
-                  We want to inform you that whenever you
-                  use our Service, in a case of an error in the app
-                  we collect data and information (through third-party
-                  products) on your phone called Log Data. This Log Data may
-                  include information such as your device Internet Protocol
-                  (“IP”) address, device name, operating system version, the
-                  configuration of the app when utilizing our Service,
-                  the time and date of your use of the Service, and other
-                  statistics.
+                 Мы хотим сообщить вам, что всякий раз, когда вы используете наш Сервис, в случае ошибки в приложении мы собираем данные и информацию (через сторонние продукты) на вашем телефоне под названием «Файл журнала». Эти данные могут включать в себя такую информацию, как адрес интернет-протокола («IP») вашего устройства, имя устройства, версия операционной системы, конфигурация приложения при использовании нашего Сервиса, время и дата использования вами Сервиса и другие статистические данные.
                 </p> <p><strong>Cookies</strong></p> <p>
-                  Cookies are files with a small amount of data that are
-                  commonly used as anonymous unique identifiers. These are sent
-                  to your browser from the websites that you visit and are
-                  stored on your device's internal memory.
+                Файлы cookie — это файлы с небольшим объемом данных, которые обычно используются в качестве анонимных уникальных идентификаторов. Они отправляются в ваш браузер с веб-сайтов, которые вы посещаете, и сохраняются во внутренней памяти вашего устройства.
+
+Эта Служба не использует «куки» в явном виде. Однако приложение может использовать сторонний код и библиотеки, которые используют файлы cookie для сбора информации и улучшения своих услуг. У вас есть возможность либо принять, либо отказаться от этих файлов cookie и узнать, когда файл cookie отправляется на ваше устройство. Если вы решите отказаться от наших файлов cookie, вы не сможете использовать некоторые части этого Сервиса.
                 </p> <p>
                   This Service does not use these “cookies” explicitly. However,
                   the app may use third-party code and libraries that use
