--- a/index.html
+++ b/index.html
@@ -24,19 +24,12 @@
                 </p> <p><strong>Cookies</strong></p> <p>
                 Файлы cookie — это файлы с небольшим объемом данных, которые обычно используются в качестве анонимных уникальных идентификаторов. Они отправляются в ваш браузер с веб-сайтов, которые вы посещаете, и сохраняются во внутренней памяти вашего устройства.
 
-Эта Служба не использует «куки» в явном виде. Однако приложение может использовать сторонний код и библиотеки, которые используют файлы cookie для сбора информации и улучшения своих услуг. У вас есть возможность либо принять, либо отказаться от этих файлов cookie и узнать, когда файл cookie отправляется на ваше устройство. Если вы решите отказаться от наших файлов cookie, вы не сможете использовать некоторые части этого Сервиса.
                 </p> <p>
-                  This Service does not use these “cookies” explicitly. However,
-                  the app may use third-party code and libraries that use
-                  “cookies” to collect information and improve their services.
-                  You have the option to either accept or refuse these cookies
-                  and know when a cookie is being sent to your device. If you
-                  choose to refuse our cookies, you may not be able to use some
-                  portions of this Service.
+                   Этот Сервис не использует «куки» в явном виде. Однако приложение может использовать сторонний код и библиотеки, которые используют файлы cookie для сбора информации и улучшения своих услуг. У вас есть возможность либо принять, либо отказаться от этих файлов cookie и узнать, когда файл cookie отправляется на ваше устройство. Если вы решите отказаться от наших файлов cookie, вы не сможете использовать некоторые части этого Сервиса.
+               
                 </p> <p><strong>Service Providers</strong></p> <p>
-                  We may employ third-party companies and
-                  individuals due to the following reasons:
-                </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
+                 Мы можем нанимать сторонние компании и частных лиц по следующим причинам:
+                </p> <ul><li>Для содействия нашему сервису;</li> <li>Для предоставления сервиса от нашего имени;</li> <li>Для оказания услуг, связанных с сервисом; или</li> <li>Чтобы помочь нам проанализировать как используется наш Сервис.</li></ul> <p>
                   We want to inform users of this Service
                   that these third parties have access to their Personal
                   Information. The reason is to perform the tasks assigned to
